--- a/popup.html
+++ b/popup.html
@@ -182,19 +182,19 @@
 				<table width="100%">
 					<tr class="darkrow">
 						<td><p class="state-header">当前账户</p></td>
-						<td>1400012616</td>
+						<td id="tx-uid"></td>
 					</tr>
 					<tr class="lightrow">
 						<td><p class="state-header">连接状态</p></td>
-						<td>已连接到免费</td>
+						<td id="tx-state"></td>
 					</tr>
 					<tr class="darkrow">
 						<td><p class="state-header">已用时长</p></td>
-						<td>13.146小时</td>
+						<td id="tx-time"></td>
 					</tr>
 					<tr class="lightrow">
 						<td><p class="state-header">账户余额</p></td>
-						<td>20元</td>
+						<td id="tx-balance"></td>
 					</tr>
 				</table>
 			</div>
